# bv_embedded

./: README
bioband_open_hardware/: README
bioband_open_hardware/hardware/: README
bioband_open_hardware/hardware/Feasibility Study/: CWA-power-budget-calculations.xls
bioband_open_hardware/hardware/Hardware Description/: BioBand_Hardware_Description.doc
bioband_open_hardware/software/: LICENSE  README
bioband_open_hardware/software/BioBand2/: LICENSE
bioband_open_hardware/software/BioBand2/Band/docs/: Doxyfile
bioband_open_hardware/software/BioBand2/Band/gcc/: README  linker.cmd  makefile  openocd.cfg
bioband_open_hardware/software/BioBand2/Band/gcc/scripts/: create_toolchain.sh  create_toolchain_mac.sh  do_flash.pl  (+2 more)
bioband_open_hardware/software/BioBand2/Band/inc/: accel.h  debug.h  hw_config.h  nand_cwa.h  shared.h  stm32f10x_conf.h  stm32f10x_it.h  tempsensor.h  usb_conf.h  usb_desc.h  usb_istr.h  usb_prop.h
bioband_open_hardware/software/BioBand2/Band/src/: accel.c  debug.c  hw_config.c  main.c  nand_cwa.c  shared.c  stm32f10x_it.c  tempsensor.c  usb_desc.c  usb_endp.c  usb_istr.c  usb_prop.c  usb_pwr.c
bioband_open_hardware/software/BioBand2/PC/Api/: band_if.cpp  band_if.h
bioband_open_hardware/software/BioBand2/PC/docs/: Doxyfile
omnikey_5553/: README
omnikey_5553/libfreefare/: Makefile.am  configure.ac
omnikey_5553/libfreefare/libfreefare/: Makefile.am  desfire_error.c  freefare.c  freefare.h  freefare_internal.h  mad.3  mad.c  mifare_application.3  mifare_application.c  mifare_classic.c  mifare_desfire.3  mifare_desfire.c  mifare_desfire_aid.c  mifare_desfire_authenticate.c  mifare_desfire_key.c  mifare_ultralight.c  tlv.c
omnikey_5553/libnfc/: Makefile.am  configure.ac
omnikey_5553/libnfc/include/nfc/: nfc-messages.h  nfc.h
omnikey_5553/libnfc/libnfc/: CMakeLists.txt  Makefile.am  nfc.c
siemens_mc55i/: README
siemens_mc55i/gsmd/: README.txt  autogen.sh  configure.ac
siemens_mc55i/gsmd/include/gsmd/: atcmd.h  event.h  gsmd.h  select.h  unsolicited.h  usock.h
siemens_mc55i/gsmd/include/libgsmd/: Makefile.am  gprs.h  libgsmd.h  misc.h  phonebook.h  pin.h  sms.h  test.h  ussd.h  voicecall.h
siemens_mc55i/gsmd/src/: Makefile.am
siemens_mc55i/gsmd/src/gsmd/: Makefile.am  atcmd.c  ext_response.c  gsmd-version.h  gsmd.c  log.c  machine.c  machine_generic.c  machine_tihtc.c  select.c  sms_cb.c  sms_pdu.c  talloc.c  timer.c  unsolicited.c  usock.c  vendor.c  vendor_bcm.c  vendor_qc.c  vendor_siemens.c  vendor_ti.c  vendor_tihtc.c
siemens_mc55i/gsmd/src/libgsmd/: Makefile.am  lgsm_internals.h  libgsmd.c  libgsmd_cancel.c  libgsmd_event.c  libgsmd_gprs.c  libgsmd_network.c  libgsmd_passthrough.c  libgsmd_phone.c  libgsmd_phonebook.c  libgsmd_pin.c  libgsmd_sms.c  libgsmd_test.c  libgsmd_ussd.c  libgsmd_voicecall.c
siemens_mc55i/mux/: Makefile  README  ts0710_mux_ldisc.c  ts0710_mux_ldisc.h
(+12 files in other folders)
